--- a/Machine Learning/model_1_NeuralNetowork_nad_trial.ipynb
+++ b/Machine Learning/model_1_NeuralNetowork_nad_trial.ipynb
@@ -600,71 +600,71 @@
      "text": [
       "Train on 8924 samples\n",
       "Epoch 1/30\n",
-      "8924/8924 - 1s - loss: 2.6701 - accuracy: 0.1927\n",
+      "8924/8924 - 2s - loss: 2.7854 - accuracy: 0.1964\n",
       "Epoch 2/30\n",
-      "8924/8924 - 0s - loss: 1.9938 - accuracy: 0.3421\n",
+      "8924/8924 - 1s - loss: 2.0216 - accuracy: 0.3421\n",
       "Epoch 3/30\n",
-      "8924/8924 - 0s - loss: 1.8408 - accuracy: 0.3421\n",
+      "8924/8924 - 1s - loss: 1.8322 - accuracy: 0.3421\n",
       "Epoch 4/30\n",
-      "8924/8924 - 0s - loss: 1.7019 - accuracy: 0.3422\n",
+      "8924/8924 - 1s - loss: 1.7223 - accuracy: 0.3422\n",
       "Epoch 5/30\n",
-      "8924/8924 - 0s - loss: 1.5350 - accuracy: 0.3659\n",
+      "8924/8924 - 1s - loss: 1.6301 - accuracy: 0.3442\n",
       "Epoch 6/30\n",
-      "8924/8924 - 0s - loss: 1.3617 - accuracy: 0.4748\n",
+      "8924/8924 - 1s - loss: 1.5104 - accuracy: 0.4027\n",
       "Epoch 7/30\n",
-      "8924/8924 - 0s - loss: 1.2156 - accuracy: 0.5511\n",
+      "8924/8924 - 1s - loss: 1.3571 - accuracy: 0.5037\n",
       "Epoch 8/30\n",
-      "8924/8924 - 0s - loss: 1.0939 - accuracy: 0.6348\n",
+      "8924/8924 - 1s - loss: 1.2295 - accuracy: 0.5693\n",
       "Epoch 9/30\n",
-      "8924/8924 - 0s - loss: 0.9847 - accuracy: 0.7015\n",
+      "8924/8924 - 1s - loss: 1.1010 - accuracy: 0.6401\n",
       "Epoch 10/30\n",
-      "8924/8924 - 0s - loss: 0.8834 - accuracy: 0.7698\n",
+      "8924/8924 - 1s - loss: 0.9821 - accuracy: 0.6927\n",
       "Epoch 11/30\n",
-      "8924/8924 - 0s - loss: 0.7908 - accuracy: 0.8097\n",
+      "8924/8924 - 1s - loss: 0.8767 - accuracy: 0.7262\n",
       "Epoch 12/30\n",
-      "8924/8924 - 0s - loss: 0.7104 - accuracy: 0.8464\n",
+      "8924/8924 - 1s - loss: 0.7840 - accuracy: 0.7842\n",
       "Epoch 13/30\n",
-      "8924/8924 - 0s - loss: 0.6385 - accuracy: 0.8637\n",
+      "8924/8924 - 1s - loss: 0.7028 - accuracy: 0.8108\n",
       "Epoch 14/30\n",
-      "8924/8924 - 0s - loss: 0.5750 - accuracy: 0.8910\n",
+      "8924/8924 - 1s - loss: 0.6338 - accuracy: 0.8413\n",
       "Epoch 15/30\n",
-      "8924/8924 - 0s - loss: 0.5203 - accuracy: 0.8956\n",
+      "8924/8924 - 1s - loss: 0.5761 - accuracy: 0.8732\n",
       "Epoch 16/30\n",
-      "8924/8924 - 0s - loss: 0.4740 - accuracy: 0.9062\n",
+      "8924/8924 - 1s - loss: 0.5266 - accuracy: 0.8893\n",
       "Epoch 17/30\n",
-      "8924/8924 - 0s - loss: 0.4337 - accuracy: 0.9133\n",
+      "8924/8924 - 1s - loss: 0.4861 - accuracy: 0.9022\n",
       "Epoch 18/30\n",
-      "8924/8924 - 0s - loss: 0.3997 - accuracy: 0.9200\n",
+      "8924/8924 - 1s - loss: 0.4517 - accuracy: 0.9088\n",
       "Epoch 19/30\n",
-      "8924/8924 - 0s - loss: 0.3706 - accuracy: 0.9239\n",
+      "8924/8924 - 1s - loss: 0.4221 - accuracy: 0.9170\n",
       "Epoch 20/30\n",
-      "8924/8924 - 0s - loss: 0.3455 - accuracy: 0.9279\n",
+      "8924/8924 - 1s - loss: 0.3965 - accuracy: 0.9180\n",
       "Epoch 21/30\n",
-      "8924/8924 - 0s - loss: 0.3253 - accuracy: 0.9309\n",
+      "8924/8924 - 1s - loss: 0.3739 - accuracy: 0.9235\n",
       "Epoch 22/30\n",
-      "8924/8924 - 0s - loss: 0.3063 - accuracy: 0.9357\n",
+      "8924/8924 - 1s - loss: 0.3534 - accuracy: 0.9253\n",
       "Epoch 23/30\n",
-      "8924/8924 - 0s - loss: 0.2887 - accuracy: 0.9395\n",
+      "8924/8924 - 1s - loss: 0.3354 - accuracy: 0.9242\n",
       "Epoch 24/30\n",
-      "8924/8924 - 0s - loss: 0.2752 - accuracy: 0.9389\n",
+      "8924/8924 - 1s - loss: 0.3191 - accuracy: 0.9277\n",
       "Epoch 25/30\n",
-      "8924/8924 - 0s - loss: 0.2634 - accuracy: 0.9409\n",
+      "8924/8924 - 1s - loss: 0.3041 - accuracy: 0.9292\n",
       "Epoch 26/30\n",
-      "8924/8924 - 0s - loss: 0.2516 - accuracy: 0.9448\n",
+      "8924/8924 - 1s - loss: 0.2903 - accuracy: 0.9349\n",
       "Epoch 27/30\n",
-      "8924/8924 - 0s - loss: 0.2406 - accuracy: 0.9448\n",
+      "8924/8924 - 1s - loss: 0.2777 - accuracy: 0.9331\n",
       "Epoch 28/30\n",
-      "8924/8924 - 0s - loss: 0.2318 - accuracy: 0.9461\n",
+      "8924/8924 - 1s - loss: 0.2660 - accuracy: 0.9368\n",
       "Epoch 29/30\n",
-      "8924/8924 - 0s - loss: 0.2237 - accuracy: 0.9479\n",
+      "8924/8924 - 1s - loss: 0.2557 - accuracy: 0.9380\n",
       "Epoch 30/30\n",
-      "8924/8924 - 0s - loss: 0.2152 - accuracy: 0.9498\n"
+      "8924/8924 - 1s - loss: 0.2460 - accuracy: 0.9413\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x24603ed1320>"
+       "<tensorflow.python.keras.callbacks.History at 0x1c5316c20f0>"
       ]
      },
      "execution_count": 12,
@@ -848,7 +848,7 @@
      "text": [
       "Fitting 3 folds for each of 9 candidates, totalling 27 fits\n",
       "[CV] C=1, gamma=0.0001 ...............................................\n",
-      "[CV] ................... C=1, gamma=0.0001, score=0.703, total=   0.9s\n",
+      "[CV] ................... C=1, gamma=0.0001, score=0.703, total=   2.9s\n",
       "[CV] C=1, gamma=0.0001 ...............................................\n"
      ]
     },
@@ -856,14 +856,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.8s remaining:    0.0s\n"
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    2.8s remaining:    0.0s\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ................... C=1, gamma=0.0001, score=0.706, total=   0.9s\n",
+      "[CV] ................... C=1, gamma=0.0001, score=0.706, total=   2.9s\n",
       "[CV] C=1, gamma=0.0001 ...............................................\n"
      ]
     },
@@ -871,69 +871,69 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    1.7s remaining:    0.0s\n"
+      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    5.7s remaining:    0.0s\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ................... C=1, gamma=0.0001, score=0.713, total=   0.9s\n",
+      "[CV] ................... C=1, gamma=0.0001, score=0.713, total=   3.0s\n",
       "[CV] C=1, gamma=0.0005 ...............................................\n",
-      "[CV] ................... C=1, gamma=0.0005, score=0.703, total=   0.9s\n",
+      "[CV] ................... C=1, gamma=0.0005, score=0.703, total=   2.8s\n",
       "[CV] C=1, gamma=0.0005 ...............................................\n",
-      "[CV] ................... C=1, gamma=0.0005, score=0.706, total=   0.9s\n",
+      "[CV] ................... C=1, gamma=0.0005, score=0.706, total=   2.8s\n",
       "[CV] C=1, gamma=0.0005 ...............................................\n",
-      "[CV] ................... C=1, gamma=0.0005, score=0.713, total=   0.9s\n",
+      "[CV] ................... C=1, gamma=0.0005, score=0.713, total=   3.4s\n",
       "[CV] C=1, gamma=0.001 ................................................\n",
-      "[CV] .................... C=1, gamma=0.001, score=0.703, total=   0.9s\n",
+      "[CV] .................... C=1, gamma=0.001, score=0.703, total=   3.1s\n",
       "[CV] C=1, gamma=0.001 ................................................\n",
-      "[CV] .................... C=1, gamma=0.001, score=0.706, total=   0.9s\n",
+      "[CV] .................... C=1, gamma=0.001, score=0.706, total=   2.4s\n",
       "[CV] C=1, gamma=0.001 ................................................\n",
-      "[CV] .................... C=1, gamma=0.001, score=0.713, total=   0.9s\n",
+      "[CV] .................... C=1, gamma=0.001, score=0.713, total=   3.4s\n",
       "[CV] C=5, gamma=0.0001 ...............................................\n",
-      "[CV] ................... C=5, gamma=0.0001, score=0.916, total=   0.5s\n",
+      "[CV] ................... C=5, gamma=0.0001, score=0.916, total=   1.6s\n",
       "[CV] C=5, gamma=0.0001 ...............................................\n",
-      "[CV] ................... C=5, gamma=0.0001, score=0.909, total=   0.4s\n",
+      "[CV] ................... C=5, gamma=0.0001, score=0.909, total=   1.7s\n",
       "[CV] C=5, gamma=0.0001 ...............................................\n",
-      "[CV] ................... C=5, gamma=0.0001, score=0.922, total=   0.4s\n",
+      "[CV] ................... C=5, gamma=0.0001, score=0.922, total=   1.7s\n",
       "[CV] C=5, gamma=0.0005 ...............................................\n",
-      "[CV] ................... C=5, gamma=0.0005, score=0.916, total=   0.5s\n",
+      "[CV] ................... C=5, gamma=0.0005, score=0.916, total=   1.6s\n",
       "[CV] C=5, gamma=0.0005 ...............................................\n",
-      "[CV] ................... C=5, gamma=0.0005, score=0.909, total=   0.5s\n",
+      "[CV] ................... C=5, gamma=0.0005, score=0.909, total=   1.6s\n",
       "[CV] C=5, gamma=0.0005 ...............................................\n",
-      "[CV] ................... C=5, gamma=0.0005, score=0.922, total=   0.4s\n",
+      "[CV] ................... C=5, gamma=0.0005, score=0.922, total=   1.6s\n",
       "[CV] C=5, gamma=0.001 ................................................\n",
-      "[CV] .................... C=5, gamma=0.001, score=0.916, total=   0.5s\n",
+      "[CV] .................... C=5, gamma=0.001, score=0.916, total=   1.7s\n",
       "[CV] C=5, gamma=0.001 ................................................\n",
-      "[CV] .................... C=5, gamma=0.001, score=0.909, total=   0.4s\n",
+      "[CV] .................... C=5, gamma=0.001, score=0.909, total=   1.7s\n",
       "[CV] C=5, gamma=0.001 ................................................\n",
-      "[CV] .................... C=5, gamma=0.001, score=0.922, total=   0.4s\n",
+      "[CV] .................... C=5, gamma=0.001, score=0.922, total=   1.6s\n",
       "[CV] C=10, gamma=0.0001 ..............................................\n",
-      "[CV] .................. C=10, gamma=0.0001, score=0.954, total=   0.3s\n",
+      "[CV] .................. C=10, gamma=0.0001, score=0.954, total=   1.1s\n",
       "[CV] C=10, gamma=0.0001 ..............................................\n",
-      "[CV] .................. C=10, gamma=0.0001, score=0.956, total=   0.3s\n",
+      "[CV] .................. C=10, gamma=0.0001, score=0.956, total=   1.2s\n",
       "[CV] C=10, gamma=0.0001 ..............................................\n",
-      "[CV] .................. C=10, gamma=0.0001, score=0.953, total=   0.3s\n",
+      "[CV] .................. C=10, gamma=0.0001, score=0.953, total=   1.3s\n",
       "[CV] C=10, gamma=0.0005 ..............................................\n",
-      "[CV] .................. C=10, gamma=0.0005, score=0.954, total=   0.3s\n",
+      "[CV] .................. C=10, gamma=0.0005, score=0.954, total=   1.1s\n",
       "[CV] C=10, gamma=0.0005 ..............................................\n",
-      "[CV] .................. C=10, gamma=0.0005, score=0.956, total=   0.3s\n",
+      "[CV] .................. C=10, gamma=0.0005, score=0.956, total=   1.3s\n",
       "[CV] C=10, gamma=0.0005 ..............................................\n",
-      "[CV] .................. C=10, gamma=0.0005, score=0.953, total=   0.3s\n",
+      "[CV] .................. C=10, gamma=0.0005, score=0.953, total=   1.3s\n",
       "[CV] C=10, gamma=0.001 ...............................................\n",
-      "[CV] ................... C=10, gamma=0.001, score=0.954, total=   0.3s\n",
+      "[CV] ................... C=10, gamma=0.001, score=0.954, total=   1.1s\n",
       "[CV] C=10, gamma=0.001 ...............................................\n",
-      "[CV] ................... C=10, gamma=0.001, score=0.956, total=   0.3s\n",
+      "[CV] ................... C=10, gamma=0.001, score=0.956, total=   1.0s\n",
       "[CV] C=10, gamma=0.001 ...............................................\n",
-      "[CV] ................... C=10, gamma=0.001, score=0.953, total=   0.3s\n"
+      "[CV] ................... C=10, gamma=0.001, score=0.953, total=   1.2s\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  27 out of  27 | elapsed:   15.0s finished\n"
+      "[Parallel(n_jobs=1)]: Done  27 out of  27 | elapsed:   51.9s finished\n"
      ]
     },
     {
